--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,6 +17,7 @@ body, html {
 	width: 100%;
 	min-height: 100%;
 	position: relative;
+	font-family: Gotham SSm A,Gotham SSm B,HelveticaNeue,Helvetica Neue,Helvetica,Arial,Lucida Grande,sans-serif;
 }
 
 body {
@@ -67,3 +68,136 @@ header {
 #nav-menu li a:hover {
 	background-color: #E56385;
 }
+
+#boxleft {
+	background-color: #EDE9E2;
+	padding: 60px 30px;
+	margin: 160px 0;
+	float: right;
+}
+
+#boxleft h2 {
+	color: #00B2A9;
+	font-weight: bolder;
+}
+
+#boxleft #become {
+	padding: 15px;
+	border-style: none;
+	border-width: 0px;
+	border-color: transparent;
+	border-radius: 10px;
+	background-color: #E54E79;
+	color: white;
+}
+
+#box::before {
+	content: '\2764';
+	font-size: 1.25em;
+	font-weight: bold;
+}
+
+/*MATERIAL INPUT*/
+ .group 			  { 
+   position:relative; 
+   margin-bottom:45px; 
+ }
+
+ input {
+ 	font-size: 18px;
+ 	padding: 10px 10px 10px 5px;
+ 	display: block;
+ 	width: 100%;
+ 	border: none;
+ 	border-bottom: 1px solid #757575;
+ 	background-color: transparent;
+ }
+
+ input:focus {
+ 	outline: none;
+ }
+
+ /* LABEL ======================================= */
+ label {
+   color:#999; 
+   font-size:18px;
+   font-weight:normal;
+   position:absolute;
+   pointer-events:none;
+   left:5px;
+   top:10px;
+   transition:0.2s ease all; 
+   -moz-transition:0.2s ease all; 
+   -webkit-transition:0.2s ease all;
+ }
+ 
+ /* active state */
+ input:focus ~ label, input:valid ~ label {
+   top:-20px;
+   font-size:14px;
+   color:#5264AE;
+ }
+ 
+ /* BOTTOM BARS ================================= */
+ .bar { 
+ 	position:relative; display:block; width:100%;
+ }
+
+ .bar:before, .bar:after {
+   content:'';
+   height:2px; 
+   width:0;
+   bottom:1px; 
+   position:absolute;
+   background:#5264AE; 
+   transition:0.2s ease all; 
+   -moz-transition:0.2s ease all; 
+   -webkit-transition:0.2s ease all;
+ }
+
+ .bar:before {
+   left:50%;
+ }
+
+ .bar:after {
+   right:50%; 
+ }
+ 
+ /* active state */
+ input:focus ~ .bar:before, input:focus ~ .bar:after {
+   width:50%;
+ }
+ 
+ /* HIGHLIGHTER ================================== */
+ .highlight {
+   position:absolute;
+   height:60%; 
+   width:100px; 
+   top:25%; 
+   left:0;
+   pointer-events:none;
+   opacity:0.5;
+ }
+ 
+ /* active state */
+ input:focus ~ .highlight {
+   -webkit-animation:inputHighlighter 0.3s ease;
+   -moz-animation:inputHighlighter 0.3s ease;
+   animation:inputHighlighter 0.3s ease;
+ }
+ 
+ /* ANIMATIONS ================ */
+ @-webkit-keyframes inputHighlighter {
+ 	from { background:#5264AE; }
+   	to 	{ width:0; background:transparent; }
+ }
+
+ @-moz-keyframes inputHighlighter {
+ 	from { background:#5264AE; }
+   	to 	{ width:0; background:transparent; }
+ }
+ 
+ @keyframes inputHighlighter {
+ 	from { background:#5264AE; }
+   	to 	{ width:0; background:transparent; }
+ } 
