--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36,11 +36,13 @@ header {
 	height: 80px;
 	width: 100px;
 	padding: 0 100px;
+	box-shadow: 0px 4px 16px 0px rgba(50, 50, 50, 0.75);
 }
 
 #logo-link img {
 	height: 100%;
 	padding: 10px;
+	color: #75726C;
 }
 
 #nav-menu {
@@ -81,14 +83,21 @@ header {
 	font-weight: bolder;
 }
 
-#boxleft #become {
-	padding: 15px;
+#boxleft #become:hover {
+	padding: 10px 20px;
 	border-style: none;
 	border-width: 0px;
 	border-color: transparent;
-	border-radius: 10px;
+	border-radius: 15px;
 	background-color: #E54E79;
 	color: white;
+	cursor: pointer;
+	cursor: hand;
+	box-shadow: 0px 2px 16px -2px rgba(50, 50, 50, 0.75);
+}
+
+.heart::before {
+
 }
 
 #box::before {
@@ -196,7 +205,7 @@ header {
  	from { background:#5264AE; }
    	to 	{ width:0; background:transparent; }
  }
- 
+
  @keyframes inputHighlighter {
  	from { background:#5264AE; }
    	to 	{ width:0; background:transparent; }
