--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -177,6 +177,7 @@ footer {
 	background-color: #75726C;
 	padding: 30px 0;
 	width: 100%;
+
 }
 
 /*MATERIAL INPUT*/
@@ -280,4 +281,8 @@ input:focus ~ .highlight {
 @keyframes inputHighlighter {
 	from { background:#5264AE; }
   	to 	{ width:0; background:transparent; }
+}
+
+footer {
+
 }
